--- a/source/settings.json
+++ b/source/settings.json
@@ -275,7 +275,7 @@
         ["Alternating", "alternating"],
         ["Standard grid", "standard-grid"]
       ],
-      "default": "standard-grid",
+      "default": "alternating",
       "description": "Sets a layout style for featured products on the Home page"
     },
     {
@@ -354,7 +354,7 @@
         ["Show on hover", "hover"],
         ["Under image", "under_image"]
       ],
-      "default": "hover",
+      "default": "under_image",
       "description": "Shows a product's name & price on hover, or under the image"
     },
     {
@@ -483,5 +483,110 @@
       "type": "text",
       "description": "Ex: https://bigcartel.bandcamp.com"
     }
-  ]
+  ],
+  "checkout": {
+    "optimize_legibility": "optimizeLegibility",
+    "header_image_max_width": "400px",
+    "header_image_max_height": "180px",
+    "antialias_text": "antialiased",
+    "header_image": "{{ logo_image }}",
+    "background_color": "{{ background_color }}",
+    "gutter_width": "28px",
+    "body_font": "{{ primary_font }}",
+    "body_font_size": "16px",
+    "step_header_font": "{{ primary_font }}",
+    "step_header_font_size": "20px",
+    "step_header_font_weight": "normal",
+    "title_font": "{{ primary_font }}",
+    "title_vertical_padding": "40px",
+    "title_background_color": "transparent",
+    "title_position": "center",
+    "title_font_size": "42px",
+    "title_font_weight": "normal",
+    "title_color": "{{ header_text_color }}",
+    "secondary_font": "{{ secondary_font }}",
+    "secondary_font_size": "15px",
+    "content_border_radius": "0",
+    "content_header_vertical_padding": "28px",
+    "content_background_color": "{{ background_color }}",
+    "content_banded": "true",
+    "content_header_height": "80px",
+    "content_horizontal_padding": "0",
+    "content_header_background_color": "{{ background_color }}",
+    "content_border_color": "transparent",
+    "content_border_width": "0",
+    "content_primary_font_size": "24px",
+    "content_header_color": "{{ text_color }}",
+    "content_color": "{{ text_color }}",
+    "link_font_size": "15px",
+    "link_color": "{{ text_color }}",
+    "link_hover_color": "{{ link_hover_color }}",
+    "error_border_width": "0",
+    "error_font_size": "16px",
+    "error_background_color": "#b11a2a",
+    "error_color": "#ffffff",
+    "error_border_radius": "4px",
+    "error_border_color": "#b11a2a",
+    "custom_inputs": true,
+    "input_focus_color": "#000000",
+    "input_focus_background_color": "#ffffff",
+    "input_border_radius": "4px",
+    "input_focus_border_color": "#000000",
+    "input_error_border_color": "#ea4859",
+    "input_color": "#000000",
+    "input_error_color": "#000000",
+    "input_border_color": "#8e8e8e",
+    "input_font_size": "16px",
+    "input_font": "{{ primary_font }}",
+    "input_horizontal_padding": "8px",
+    "input_border_width": "2px",
+    "input_height": "40px",
+    "input_background_color": "#ffffff",
+    "input_error_background_color": "#ffffff",
+    "label_text_transform": "normal",
+    "label_color": "#999999",
+    "label_font_weight": "normal",
+    "label_font_size": "16px",
+    "in_field_labels": false,
+    "button_border_color": "{{ button_background_color }}",
+    "button_border_radius": "4px",
+    "button_hover_border_color": "{{ button_hover_background_color }}",
+    "button_height": "47px",
+    "button_border_width": "2px",
+    "button_font": "{{ primary_font }}",
+    "button_font_size": "16px",
+    "button_font_weight": "bold",
+    "button_background_color": "{{ button_background_color }}",
+    "button_color": "{{ button_text_color }}",
+    "button_hover_color": "{{ button_text_color }}",
+    "button_position": "center",
+    "button_hover_background_color": "{{ button_hover_background_color }}",
+    "step_inactive_header_color": "opacify({{ text_color }}, .25)",
+    "step_border_color": "{{ border_color }}",
+    "step_border_width": "2px",
+    "step_background_color": "{{ background_color }}",
+    "step_inactive_border_color": "opacify({{ border_color }}, .25)",
+    "step_primary_font_weight": "normal",
+    "step_header_color": "{{ text_color }}",
+    "step_header_position": "center",
+    "step_inactive_background_color": "{{ background_color }}",
+    "step_vertical_padding": "30px",
+    "step_primary_font_size": "24px",
+    "step_border_style": "solid",
+    "step_primary_font": "{{ primary_font }}",
+    "summary_inactive_item_border_color": "opacify({{ border_color }}, .25)",
+    "summary_font_size": "15px",
+    "summary_submit_background_color": "{{ background_color }}",
+    "summary_inactive_color": "opacify({{ text_color }}, .25)",
+    "summary_submit_border_color": "opacify({{ border_color }}, .25)",
+    "summary_item_border_width": "1px",
+    "summary_item_border_color": "{{ border_color }}",
+    "summary_secondary_color": "{{ text_color }}",
+    "summary_submit_border_width": "1px",
+    "summary_item_list_border_color": "{{ border_color }}",
+    "summary_inactive_secondary_color": "opacify({{ text_color }}, .25)",
+    "summary_item_list_border_width": "2px",
+    "summary_color": "{{ text_color }}",
+    "summary_inactive_item_list_border_color": "opacify({{ border_color }}, .25)"
+  }
 }
