--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Cosmos",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "images": [
     {
       "variable": "logo_image",
@@ -22,78 +22,28 @@
           "name": "Classic #1",
           "fonts": [
             {
-              "variable": "primary_font",
-              "value": "DM Sans"
-            },
-            {
-              "variable": "secondary_font",
-              "value": "DM Sans"
+              "primary_font": "DM Sans",
+              "secondary_font": "DM Sans"
             }
           ],
           "colors": [
             {
-              "variable": "background_color",
-              "value": "#FFFFFF"
-            },
-            {
-              "variable": "text_color",
-              "value": "#111111"
-            },
-            {
-              "variable": "link_hover_color",
-              "value": "#5900FF"
-            },
-            {
-              "variable": "header_text_color",
-              "value": "#111111"
-            },
-            {
-              "variable": "border_color",
-              "value": "#EAEBEF"
-            },
-            {
-              "variable": "button_background_color",
-              "value": "#111111"
-            },
-            {
-              "variable": "button_hover_background_color",
-              "value": "#5900FF"
-            },
-            {
-              "variable": "button_text_color",
-              "value": "#FFFFFF"
-            },
-            {
-              "variable": "announcement_background_color",
-              "value": "#F3F3F5"
-            },
-            {
-              "variable": "announcement_text_color",
-              "value": "#111111"
-            },
-            {
-              "variable": "product_status_background_color",
-              "value": "#F3F3F5"
-            },
-            {
-              "variable": "product_status_text_color",
-              "value": "#111111"
-            },
-            {
-              "variable": "hero_overlay_color",
-              "value": "#111111"
-            },
-            {
-              "variable": "hero_text_color",
-              "value": "#FFFFFF"
-            },
-            {
-              "variable": "product_hover_background_color",
-              "value": "#111111"
-            },
-            {
-              "variable": "product_hover_text_color",
-              "value": "#FFFFFF"
+              "background_color": "#FFFFFF",
+              "text_color": "#111111",
+              "link_hover_color": "#5900FF",
+              "header_text_color": "#111111",
+              "border_color": "#EAEBEF",
+              "button_background_color": "#111111",
+              "button_hover_background_color": "#5900FF",
+              "button_text_color": "#FFFFFF",
+              "announcement_background_color": "#F3F3F5",
+              "announcement_text_color": "#111111",
+              "product_status_background_color": "#F3F3F5",
+              "product_status_text_color": "#111111",
+              "hero_overlay_color": "#111111",
+              "hero_text_color": "#FFFFFF",
+              "product_hover_overlay_color": "#111111",
+              "product_hover_text_color": "#FFFFFF"
             }
           ]
         },
@@ -101,78 +51,28 @@
           "name": "Classic #2",
           "fonts": [
             {
-              "variable": "primary_font",
-              "value": "Lora"
-            },
-            {
-              "variable": "secondary_font",
-              "value": "Roboto"
+              "primary_font": "Lora",
+              "secondary_font": "Roboto"
             }
           ],
           "colors": [
             {
-              "variable": "background_color",
-              "value": "#141415"
-            },
-            {
-              "variable": "text_color",
-              "value": "#F8F8F8"
-            },
-            {
-              "variable": "link_hover_color",
-              "value": "#AEAEAE"
-            },
-            {
-              "variable": "header_text_color",
-              "value": "#F8F8F8"
-            },
-            {
-              "variable": "border_color",
-              "value": "#494949"
-            },
-            {
-              "variable": "button_background_color",
-              "value": "#F8F8F8"
-            },
-            {
-              "variable": "button_hover_background_color",
-              "value": "#AEAEAE"
-            },
-            {
-              "variable": "button_text_color",
-              "value": "#141415"
-            },
-            {
-              "variable": "announcement_background_color",
-              "value": "#242424"
-            },
-            {
-              "variable": "announcement_text_color",
-              "value": "#F8F8F8"
-            },
-            {
-              "variable": "product_status_background_color",
-              "value": "#F8F8F8"
-            },
-            {
-              "variable": "product_status_text_color",
-              "value": "#141415"
-            },
-            {
-              "variable": "hero_overlay_color",
-              "value": "#141415"
-            },
-            {
-              "variable": "hero_text_color",
-              "value": "#F8F8F8"
-            },
-            {
-              "variable": "product_hover_background_color",
-              "value": "#141415"
-            },
-            {
-              "variable": "product_hover_text_color",
-              "value": "#F8F8F8"
+              "background_color": "#141415",
+              "text_color": "#F8F8F8",
+              "link_hover_color": "#AEAEAE",
+              "header_text_color": "#F8F8F8",
+              "border_color": "#494949",
+              "button_background_color": "#F8F8F8",
+              "button_hover_background_color": "#AEAEAE",
+              "button_text_color": "#141415",
+              "announcement_background_color": "#242424",
+              "announcement_text_color": "#F8F8F8",
+              "product_status_background_color": "#F8F8F8",
+              "product_status_text_color": "#141415",
+              "hero_overlay_color": "#141415",
+              "hero_text_color": "#F8F8F8",
+              "product_hover_overlay_color": "#141415",
+              "product_hover_text_color": "#F8F8F8"
             }
           ]
         },
@@ -180,78 +80,28 @@
           "name": "Classic #3",
           "fonts": [
             {
-              "variable": "primary_font",
-              "value": "Cabin"
-            },
-            {
-              "variable": "secondary_font",
-              "value": "Cabin"
+              "primary_font": "Cabin",
+              "secondary_font": "Cabin"
             }
           ],
           "colors": [
             {
-              "variable": "background_color",
-              "value": "#F8F8FA"
-            },
-            {
-              "variable": "text_color",
-              "value": "#2A2A2C"
-            },
-            {
-              "variable": "link_hover_color",
-              "value": "#203BE1"
-            },
-            {
-              "variable": "header_text_color",
-              "value": "#2A2A2C"
-            },
-            {
-              "variable": "border_color",
-              "value": "#C0C2CE"
-            },
-            {
-              "variable": "button_background_color",
-              "value": "#203BE1"
-            },
-            {
-              "variable": "button_hover_background_color",
-              "value": "#2A2A2C"
-            },
-            {
-              "variable": "button_text_color",
-              "value": "#F8F8FA"
-            },
-            {
-              "variable": "announcement_background_color",
-              "value": "#E5E6EC"
-            },
-            {
-              "variable": "announcement_text_color",
-              "value": "#2A2A2C"
-            },
-            {
-              "variable": "product_status_background_color",
-              "value": "#E5E6EC"
-            },
-            {
-              "variable": "product_status_text_color",
-              "value": "#F8F8FA"
-            },
-            {
-              "variable": "hero_overlay_color",
-              "value": "#2A2A2C"
-            },
-            {
-              "variable": "hero_text_color",
-              "value": "#F8F8FA"
-            },
-            {
-              "variable": "product_hover_background_color",
-              "value": "#2A2A2C"
-            },
-            {
-              "variable": "product_hover_text_color",
-              "value": "#F8F8FA"
+              "background_color": "#F8F8FA",
+              "text_color": "#2A2A2C",
+              "link_hover_color": "#203BE1",
+              "header_text_color": "#2A2A2C",
+              "border_color": "#C0C2CE",
+              "button_background_color": "#203BE1",
+              "button_hover_background_color": "#2A2A2C",
+              "button_text_color": "#F8F8FA",
+              "announcement_background_color": "#E5E6EC",
+              "announcement_text_color": "#2A2A2C",
+              "product_status_background_color": "#E5E6EC",
+              "product_status_text_color": "#F8F8FA",
+              "hero_overlay_color": "#2A2A2C",
+              "hero_text_color": "#F8F8FA",
+              "product_hover_overlay_color": "#2A2A2C",
+              "product_hover_text_color": "#F8F8FA"
             }
           ]
         }
