--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Cosmos",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "images": [
     {
       "variable": "logo_image",
@@ -20,90 +20,78 @@
       "styles": [
         {
           "name": "Classic #1",
-          "fonts": [
-            {
-              "primary_font": "DM Sans",
-              "secondary_font": "DM Sans"
-            }
-          ],
-          "colors": [
-            {
-              "background_color": "#FFFFFF",
-              "text_color": "#111111",
-              "link_hover_color": "#5900FF",
-              "header_text_color": "#111111",
-              "border_color": "#EAEBEF",
-              "button_background_color": "#111111",
-              "button_hover_background_color": "#5900FF",
-              "button_text_color": "#FFFFFF",
-              "announcement_background_color": "#F3F3F5",
-              "announcement_text_color": "#111111",
-              "product_status_background_color": "#F3F3F5",
-              "product_status_text_color": "#111111",
-              "hero_overlay_color": "#111111",
-              "hero_text_color": "#FFFFFF",
-              "product_hover_overlay_color": "#111111",
-              "product_hover_text_color": "#FFFFFF"
-            }
-          ]
+          "fonts": {
+            "primary_font": "DM Sans",
+            "secondary_font": "DM Sans"
+          },
+          "colors": {
+            "background_color": "#FFFFFF",
+            "text_color": "#111111",
+            "link_hover_color": "#5900FF",
+            "header_text_color": "#111111",
+            "border_color": "#EAEBEF",
+            "button_background_color": "#111111",
+            "button_hover_background_color": "#5900FF",
+            "button_text_color": "#FFFFFF",
+            "announcement_background_color": "#F3F3F5",
+            "announcement_text_color": "#111111",
+            "product_status_background_color": "#F3F3F5",
+            "product_status_text_color": "#111111",
+            "hero_overlay_color": "#111111",
+            "hero_text_color": "#FFFFFF",
+            "product_hover_overlay_color": "#111111",
+            "product_hover_text_color": "#FFFFFF"
+          }
         },
         {
           "name": "Classic #2",
-          "fonts": [
-            {
-              "primary_font": "Lora",
-              "secondary_font": "Roboto"
-            }
-          ],
-          "colors": [
-            {
-              "background_color": "#141415",
-              "text_color": "#F8F8F8",
-              "link_hover_color": "#AEAEAE",
-              "header_text_color": "#F8F8F8",
-              "border_color": "#494949",
-              "button_background_color": "#F8F8F8",
-              "button_hover_background_color": "#AEAEAE",
-              "button_text_color": "#141415",
-              "announcement_background_color": "#242424",
-              "announcement_text_color": "#F8F8F8",
-              "product_status_background_color": "#F8F8F8",
-              "product_status_text_color": "#141415",
-              "hero_overlay_color": "#141415",
-              "hero_text_color": "#F8F8F8",
-              "product_hover_overlay_color": "#141415",
-              "product_hover_text_color": "#F8F8F8"
-            }
-          ]
+          "fonts": {
+            "primary_font": "Lora",
+            "secondary_font": "Roboto"
+          },
+          "colors": {
+            "background_color": "#141415",
+            "text_color": "#F8F8F8",
+            "link_hover_color": "#AEAEAE",
+            "header_text_color": "#F8F8F8",
+            "border_color": "#494949",
+            "button_background_color": "#F8F8F8",
+            "button_hover_background_color": "#AEAEAE",
+            "button_text_color": "#141415",
+            "announcement_background_color": "#242424",
+            "announcement_text_color": "#F8F8F8",
+            "product_status_background_color": "#F8F8F8",
+            "product_status_text_color": "#141415",
+            "hero_overlay_color": "#141415",
+            "hero_text_color": "#F8F8F8",
+            "product_hover_overlay_color": "#141415",
+            "product_hover_text_color": "#F8F8F8"
+          }
         },
         {
           "name": "Classic #3",
-          "fonts": [
-            {
-              "primary_font": "Cabin",
-              "secondary_font": "Cabin"
-            }
-          ],
-          "colors": [
-            {
-              "background_color": "#F8F8FA",
-              "text_color": "#2A2A2C",
-              "link_hover_color": "#203BE1",
-              "header_text_color": "#2A2A2C",
-              "border_color": "#C0C2CE",
-              "button_background_color": "#203BE1",
-              "button_hover_background_color": "#2A2A2C",
-              "button_text_color": "#F8F8FA",
-              "announcement_background_color": "#E5E6EC",
-              "announcement_text_color": "#2A2A2C",
-              "product_status_background_color": "#E5E6EC",
-              "product_status_text_color": "#F8F8FA",
-              "hero_overlay_color": "#2A2A2C",
-              "hero_text_color": "#F8F8FA",
-              "product_hover_overlay_color": "#2A2A2C",
-              "product_hover_text_color": "#F8F8FA"
-            }
-          ]
+          "fonts": {
+            "primary_font": "Cabin",
+            "secondary_font": "Cabin"
+          },
+          "colors": {
+            "background_color": "#F8F8FA",
+            "text_color": "#2A2A2C",
+            "link_hover_color": "#203BE1",
+            "header_text_color": "#2A2A2C",
+            "border_color": "#C0C2CE",
+            "button_background_color": "#203BE1",
+            "button_hover_background_color": "#2A2A2C",
+            "button_text_color": "#F8F8FA",
+            "announcement_background_color": "#E5E6EC",
+            "announcement_text_color": "#2A2A2C",
+            "product_status_background_color": "#E5E6EC",
+            "product_status_text_color": "#F8F8FA",
+            "hero_overlay_color": "#2A2A2C",
+            "hero_text_color": "#F8F8FA",
+            "product_hover_overlay_color": "#2A2A2C",
+            "product_hover_text_color": "#F8F8FA"
+          }
         }
       ]
     }
@@ -303,8 +291,12 @@
       "variable": "featured_order",
       "label": "Featured products order",
       "type": "select",
-      "options": "product_orders",
-      "default": "position",
+      "options": [
+        ["Regular", "regular"],
+        ["Top Selling", "sales"],
+        ["Newest", "newest"]
+      ],
+      "default": "regular",
       "description": "The order of products on the Home page"
     },
     {
