Rename style_presets => preset_styles

--- a/source/settings.json
+++ b/source/settings.json
@@ -14,9 +14,15 @@
     }
   ],
 
-  "style_presets": [
+  "preset_styles": [
     {
       "name": "Classic",
+      "preview_styles": {
+        "title_font": "primary_font",
+        "body_font": "secondary_font",
+        "text_color": "text_color",
+        "background_color": "background_color"
+      },
       "styles": [
         {
           "name": "Classic #1",
@@ -86,11 +92,183 @@
             "announcement_background_color": "#E5E6EC",
             "announcement_text_color": "#2A2A2C",
             "product_status_background_color": "#E5E6EC",
-            "product_status_text_color": "#F8F8FA",
+            "product_status_text_color": "#2A2A2C",
             "hero_overlay_color": "#2A2A2C",
             "hero_text_color": "#F8F8FA",
             "product_hover_overlay_color": "#2A2A2C",
             "product_hover_text_color": "#F8F8FA"
+          }
+        }
+      ]
+    },
+    {
+      "name": "Elegant",
+      "preview_styles": {
+        "title_font": "primary_font",
+        "body_font": "secondary_font",
+        "text_color": "text_color",
+        "background_color": "background_color"
+      },
+      "styles": [
+        {
+          "name": "Elegant #1",
+          "fonts": {
+            "primary_font": "Prata",
+            "secondary_font": "Source Sans Pro"
+          },
+          "colors": {
+            "background_color": "#F1F1F1",
+            "text_color": "#0F1B27",
+            "link_hover_color": "#8A5A5A",
+            "header_text_color": "#0F1B27",
+            "border_color": "#C7C7C7",
+            "button_background_color": "#DBD1D1",
+            "button_hover_background_color": "#C0AFAF",
+            "button_text_color": "#0F1B27",
+            "announcement_background_color": "#DBD1D1",
+            "announcement_text_color": "#0F1B27",
+            "product_status_background_color": "#DBD1D1",
+            "product_status_text_color": "#0F1B27",
+            "hero_overlay_color": "#0F1B27",
+            "hero_text_color": "#F1F1F1",
+            "product_hover_overlay_color": "#0F1B27",
+            "product_hover_text_color": "#F1F1F1"
+          }
+        },
+        {
+          "name": "Elegant #2",
+          "fonts": {
+            "primary_font": "Cormorant",
+            "secondary_font": "Raleway"
+          },
+          "colors": {
+            "background_color": "#F5F4EE",
+            "text_color": "#262522",
+            "link_hover_color": "#7C3C17",
+            "header_text_color": "#262522",
+            "border_color": "#C3C0B0",
+            "button_background_color": "#262522",
+            "button_hover_background_color": "#7C3C17",
+            "button_text_color": "#F5F4EE",
+            "announcement_background_color": "#F1DBCE",
+            "announcement_text_color": "#262522",
+            "product_status_background_color": "#F1DBCE",
+            "product_status_text_color": "#262522",
+            "hero_overlay_color": "#262522",
+            "hero_text_color": "#F5F4EE",
+            "product_hover_overlay_color": "#262522",
+            "product_hover_text_color": "#F5F4EE"
+          }
+        },
+        {
+          "name": "Elegant #3",
+          "fonts": {
+            "primary_font": "Marcellus",
+            "secondary_font": "Inter"
+          },
+          "colors": {
+            "background_color": "#222121",
+            "text_color": "#FFF5E5",
+            "link_hover_color": "#CAB696",
+            "header_text_color": "#FFF5E5",
+            "border_color": "#605553",
+            "button_background_color": "#CAB696",
+            "button_hover_background_color": "#FFF5E5",
+            "button_text_color": "#222121",
+            "announcement_background_color": "#332F2F",
+            "announcement_text_color": "#FFF5E5",
+            "product_status_background_color": "#CAB696",
+            "product_status_text_color": "#222121",
+            "hero_overlay_color": "#222121",
+            "hero_text_color": "#FFF5E5",
+            "product_hover_overlay_color": "#222121",
+            "product_hover_text_color": "#FFF5E5"
+          }
+        }
+      ]
+    },
+    {
+      "name": "Playful",
+      "preview_styles": {
+        "title_font": "primary_font",
+        "body_font": "secondary_font",
+        "text_color": "text_color",
+        "background_color": "background_color"
+      },
+      "styles": [
+        {
+          "name": "Playful #1",
+          "fonts": {
+            "primary_font": "Syne",
+            "secondary_font": "Inter"
+          },
+          "colors": {
+            "background_color": "#FFFFFF",
+            "text_color": "#0000FF",
+            "link_hover_color": "#000098",
+            "header_text_color": "#0000FF",
+            "border_color": "#E0E1E7",
+            "button_background_color": "#FFE500",
+            "button_hover_background_color": "#EBD300",
+            "button_text_color": "#000098",
+            "announcement_background_color": "#0000FF",
+            "announcement_text_color": "#FFFFFF",
+            "product_status_background_color": "#FF0000",
+            "product_status_text_color": "#FFFFFF",
+            "hero_overlay_color": "#000000",
+            "hero_text_color": "#FFFFFF",
+            "product_hover_overlay_color": "#0000FF",
+            "product_hover_text_color": "#FFFFFF"
+          }
+        },
+        {
+          "name": "Playful #2",
+          "fonts": {
+            "primary_font": "Fraunces",
+            "secondary_font": "Poppins"
+          },
+          "colors": {
+            "background_color": "#5E2498",
+            "text_color": "#FFFFFF",
+            "link_hover_color": "#FFE462",
+            "header_text_color": "#FFFFFF",
+            "border_color": "#360665",
+            "button_background_color": "#D01A67",
+            "button_hover_background_color": "#B0094F",
+            "button_text_color": "#FFFFFF",
+            "announcement_background_color": "#51168B",
+            "announcement_text_color": "#FFFFFF",
+            "product_status_background_color": "#FFE462",
+            "product_status_text_color": "#5E2498",
+            "hero_overlay_color": "#360665",
+            "hero_text_color": "#FFFFFF",
+            "product_hover_overlay_color": "#360665",
+            "product_hover_text_color": "#FFFFFF"
+          }
+        },
+        {
+          "name": "Playful #3",
+          "fonts": {
+            "primary_font": "Quicksand",
+            "secondary_font": "Quicksand"
+          },
+          "colors": {
+            "background_color": "#FFE9F4",
+            "text_color": "#243588",
+            "link_hover_color": "#0C143B",
+            "header_text_color": "#243588",
+            "border_color": "#E1ADC7",
+            "button_background_color": "#243588",
+            "button_hover_background_color": "#0C143B",
+            "button_text_color": "#FFE9F4",
+            "announcement_background_color": "#FFD8EB",
+            "announcement_text_color": "#0C143B",
+            "product_status_background_color": "#FFFA8D",
+            "product_status_text_color": "#0C143B",
+            "hero_overlay_color": "#243588",
+            "hero_text_color": "#FFE9F4",
+            "product_hover_overlay_color": "#243588",
+            "product_hover_text_color": "#FFE9F4"
           }
         }
       ]
